views: adjust bookmark bar spacings

The old spacings: 12pt label <-> icon, 0pt between
New spacings: 8pt label <-> icon, 6pt between

Before & after screenshot attached to the bug.

Bug: 826264
Change-Id: I63b042bd7188a02a12d6150936d6236ef6e97478
Reviewed-on: https://chromium-review.googlesource.com/1023319
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552821}
Former-commit-id: 31047d0e1fa217d247ba5a82e4d7f62c7b452c56